--- a/src/main/resources/strings/vlcj-player.properties
+++ b/src/main/resources/strings/vlcj-player.properties
@@ -133,13 +133,13 @@ menu.help.item.about.mnemonic               = A
 menu.help.item.about.shortcut               = shift F1
 menu.help.item.about.menuIcon               = info
 
-dialog.about                                = About vlcj Player
-dialog.about.application                    = vlcj Player
-dialog.about.blurb1                         = vlcj Player is a free and open source media player made by Caprica Software.
-dialog.about.blurb2                         = This is a demo project showing how to build a complete media player application using vlcj.
+dialog.about                                = About SubZero Player
+dialog.about.application                    = SubZero Player
+dialog.about.blurb1                         = SubZero Player is a free and open source media player made by The Agent of Chaos using vlcj library.
+dialog.about.blurb2                         = This is a demo project showing how to build a complete media player application using SubZero.
 dialog.about.attribution1                   = This project uses icons from the VLC project.
-dialog.about.applicationVersion             = vlcj Player Version
-dialog.about.vlcjVersion                    = vlcj Version
+dialog.about.applicationVersion             = SubZero Player Version
+dialog.about.vlcjVersion                    = SubZero Version
 dialog.about.vlcVersion                     = LibVLC Version
 
 dialog.messages                             = Messages
