enable shortcuts on full screen  #SZ-51

--- a/src/main/resources/strings/vlcj-player.properties
+++ b/src/main/resources/strings/vlcj-player.properties
@@ -38,6 +38,7 @@ menu.playback.item.previousChapter          = Previous Chapter
 menu.playback.item.nextChapter              = Next Chapter
 menu.playback.item.play                     = Play
 menu.playback.item.play.mnemonic            = P
+menu.playback.item.play.shortcut            = SPACE
 menu.playback.item.play.tooltip             = Play
 menu.playback.item.play.menuIcon            = play
 menu.playback.item.play.buttonIcon          = play
