--- a/src/main/resources/strings/vlcj-player.properties
+++ b/src/main/resources/strings/vlcj-player.properties
@@ -31,9 +31,11 @@ menu.playback.item.speed.item./4            = /4
 menu.playback.item.skipForward              = Jump Forward
 menu.playback.item.skipForward.mnemonic     = J
 menu.playback.item.skipForward.menuIcon     = skip-forward
+menu.playback.item.skipForward.shortcut     = RIGHT
 menu.playback.item.skipBackward             = Jump Backward
 menu.playback.item.skipBackward.mnemonic    = K
 menu.playback.item.skipBackward.menuIcon    = skip-back
+menu.playback.item.skipBackward.shortcut    = LEFT
 menu.playback.item.previousChapter          = Previous Chapter
 menu.playback.item.nextChapter              = Next Chapter
 menu.playback.item.play                     = Play
@@ -63,12 +65,16 @@ menu.audio.item.stereoMode.item.reverse     = Reverse Stereo
 menu.audio.item.increaseVolume              = Increase Volume
 menu.audio.item.increaseVolume.mnemonic     = I
 menu.audio.item.increaseVolume.menuIcon     = increase-volume
+menu.audio.item.increaseVolume.shortcut     = UP
 menu.audio.item.decreaseVolume              = Decrease Volume
 menu.audio.item.decreaseVolume.mnemonic     = D
 menu.audio.item.decreaseVolume.menuIcon     = decrease-volume
+menu.audio.item.decreaseVolume.shortcut     = DOWN
 menu.audio.item.mute                        = Mute
 menu.audio.item.mute.mnemonic               = M
 menu.audio.item.mute.menuIcon               = mute
+menu.audio.item.mute.buttonIcon             = volume-muted
+menu.audio.item.mute.shortcut               = M
 
 menu.video                                  = Video
 menu.video.mnemonic                         = V
@@ -101,6 +107,7 @@ menu.subtitle                               = Subtitle
 menu.subtitle.mnemonic                      = S
 menu.subtitle.item.addSubtitleFile          = Add Subtitle File...
 menu.subtitle.item.addSubtitleFile.mnemonic = S
+menu.subtitle.item.addSubtitleFile.shortcut = S
 menu.subtitle.item.track                    = Sub Track
 menu.subtitle.item.track.mnemonic           = T
 
