first approach to add language list in menu #SZ-52

--- a/src/main/resources/strings/vlcj-player.properties
+++ b/src/main/resources/strings/vlcj-player.properties
@@ -105,11 +105,16 @@ menu.video.item.snapshot.buttonIcon         = snapshot
 
 menu.subtitle                               = Subtitle
 menu.subtitle.mnemonic                      = S
-menu.subtitle.item.addSubtitleFile          = Add Subtitle File...
+menu.subtitle.item.addSubtitleFile          = Add Subtitle...
 menu.subtitle.item.addSubtitleFile.mnemonic = S
 menu.subtitle.item.addSubtitleFile.shortcut = S
+menu.subtitle.item.addSubtitleFile2         = Add Second Subtitle...
+menu.subtitle.item.addSubtitleFile2.mnemonic = Alt+S
+menu.subtitle.item.addSubtitleFile2.shortcut = alt S
 menu.subtitle.item.track                    = Sub Track
 menu.subtitle.item.track.mnemonic           = T
+menu.subtitle.item.language                 = Language Pair
+menu.subtitle.item.language.mnemonic        = L
 
 menu.tools                                  = Tools
 menu.tools.mnemonic                         = T
