added new frame menu to choose language pair #SZ-52

--- a/src/main/resources/strings/vlcj-player.properties
+++ b/src/main/resources/strings/vlcj-player.properties
@@ -116,6 +116,12 @@ menu.subtitle.item.track.mnemonic           = T
 menu.subtitle.item.language                 = Language Pair
 menu.subtitle.item.language.mnemonic        = L
 
+menu.subtitle.item.languagepack             = Language Pack
+menu.subtitle.item.languagepack.mnemonic    = Y
+menu.subtitle.item.languagepack.shortcut    = control Y
+menu.subtitle.item.languagepack.tooltip     = Show language settings
+menu.subtitle.item.languagepack.menuIcon    = effects
+
 menu.tools                                  = Tools
 menu.tools.mnemonic                         = T
 menu.tools.item.effects                     = Effects and Filters
