load languages asynchroniously. better language layout. clean subtitle data onPlaying. added LanguagePairSwitchEvent #SZ-52

--- a/src/main/resources/strings/vlcj-player.properties
+++ b/src/main/resources/strings/vlcj-player.properties
@@ -113,14 +113,12 @@ menu.subtitle.item.addSubtitleFile2.mnemonic = Alt+S
 menu.subtitle.item.addSubtitleFile2.shortcut = alt S
 menu.subtitle.item.track                    = Sub Track
 menu.subtitle.item.track.mnemonic           = T
-menu.subtitle.item.language                 = Language Pair
-menu.subtitle.item.language.mnemonic        = L
 
-menu.subtitle.item.languagepack             = Language Pack
-menu.subtitle.item.languagepack.mnemonic    = Y
-menu.subtitle.item.languagepack.shortcut    = control Y
+menu.subtitle.item.languagepack             = Language Pair...
+menu.subtitle.item.languagepack.mnemonic    = L
+menu.subtitle.item.languagepack.shortcut    = L
 menu.subtitle.item.languagepack.tooltip     = Show language settings
-menu.subtitle.item.languagepack.menuIcon    = effects
+menu.subtitle.item.languagepack.menuIcon    = languages
 
 menu.tools                                  = Tools
 menu.tools.mnemonic                         = T
