added menu to switch between overlays: translation or second . addes shortcuts #SZ-24

--- a/src/main/resources/strings/vlcj-player.properties
+++ b/src/main/resources/strings/vlcj-player.properties
@@ -109,8 +109,8 @@ menu.subtitle.item.addSubtitleFile          = Add Subtitle...
 menu.subtitle.item.addSubtitleFile.mnemonic = S
 menu.subtitle.item.addSubtitleFile.shortcut = S
 menu.subtitle.item.addSubtitleFile2         = Add Second Subtitle...
-menu.subtitle.item.addSubtitleFile2.mnemonic = Alt+S
-menu.subtitle.item.addSubtitleFile2.shortcut = alt S
+menu.subtitle.item.addSubtitleFile2.mnemonic = Shift+S
+menu.subtitle.item.addSubtitleFile2.shortcut = shift S
 menu.subtitle.item.track                    = Sub Track
 menu.subtitle.item.track.mnemonic           = T
 
@@ -119,6 +119,23 @@ menu.subtitle.item.languagepack.mnemonic    = L
 menu.subtitle.item.languagepack.shortcut    = L
 menu.subtitle.item.languagepack.tooltip     = Show language settings
 menu.subtitle.item.languagepack.menuIcon    = languages
+
+menu.subtitle.item.switchOverlay             = Switch Overlay
+menu.subtitle.item.switchOverlay.mnemonic    = W
+menu.subtitle.item.switchOverlay.shortcut    = W
+menu.subtitle.item.switchOverlay.tooltip     = Switch overlay style
+
+menu.subtitle.item.switchOverlay.TRANSLATION             = Translation
+menu.subtitle.item.switchOverlay.TRANSLATION.mnemonic    = T
+menu.subtitle.item.switchOverlay.TRANSLATION.shortcut    = T
+
+menu.subtitle.item.switchOverlay.SECOND_SUBTITLE             = Second Subtitle
+menu.subtitle.item.switchOverlay.SECOND_SUBTITLE.mnemonic    = U
+menu.subtitle.item.switchOverlay.SECOND_SUBTITLE.shortcut    = U
+
+menu.subtitle.item.switchOverlay.OFF             = Off
+menu.subtitle.item.switchOverlay.OFF.mnemonic    = O
+menu.subtitle.item.switchOverlay.OFF.shortcut    = O
 
 menu.tools                                  = Tools
 menu.tools.mnemonic                         = T
