--- a/src/main/resources/strings/vlcj-player.properties
+++ b/src/main/resources/strings/vlcj-player.properties
@@ -6,6 +6,10 @@ menu.media.item.openFile                    = Open File...
 menu.media.item.openFile.mnemonic           = F
 menu.media.item.openFile.shortcut           = control O
 menu.media.item.openFile.menuIcon           = file
+menu.media.item.openMrlFile                 = Open Media via URL...
+menu.media.item.openMrlFile.mnemonic        = M
+menu.media.item.openMrlFile.shortcut        = control M
+menu.media.item.openMrlFile.menuIcon        = mrl
 menu.media.item.recent                      = Open Recent Media
 menu.media.item.recent.mnemonic             = R
 menu.media.item.recent.item.clear           = Clear
@@ -145,8 +149,6 @@ menu.tools.item.effects.shortcut            = control E
 menu.tools.item.effects.tooltip             = Show extended settings
 menu.tools.item.effects.menuIcon            = effects
 menu.tools.item.messages                    = Messages
-menu.tools.item.messages.mnemonic           = M
-menu.tools.item.messages.shortcut           = control M
 menu.tools.item.messages.menuIcon           = messages
 menu.tools.item.debug                       = Debug
 menu.tools.item.debug.mnemonic              = D
