refactoring taking snapshot behaviour. updating TODO list #SZ-63

--- a/src/main/resources/strings/vlcj-player.properties
+++ b/src/main/resources/strings/vlcj-player.properties
@@ -202,5 +202,14 @@ dialog.errorEncountered                     = Open File Error
 error.errorEncountered                      = Failed to open {0}
 
 dialog.saveImage                            = Save Image
+dialog.saveImageWarning                     = Image already exists, overwrite?
+dialog.saveImageWarningTitle                     = Image already exists
 error.saveImage                             = Failed to save image to {0}\n{1}
 error.saveImageFormat                       = Unknown image format "{0}"
+
+messages.urlNotFound                        = "No media found on this URL"
+messages.languageDownloaded                 = "Language pair was download successfully"
+messages.languageDownloadedTitle            = "Language pair was download successfully"
+messages.languageNotDownloaded              = "Language pair download failed. Please try again later"
+messages.languageNotDownloadedTitle         = "Download Failed"
+messages.clear                              = "Clear"
