--- a/pom.xml
+++ b/pom.xml
@@ -159,12 +159,12 @@
         </dependency>
         <dependency>
             <groupId>com.giorgimode</groupId>
-            <artifactId>subtitle</artifactId>
+            <artifactId>subtitle-agent</artifactId>
             <version>1.0.0</version>
         </dependency>
         <dependency>
             <groupId>com.giorgimode</groupId>
-            <artifactId>dictionary</artifactId>
+            <artifactId>dictionary-agent</artifactId>
             <version>1.0.0</version>
         </dependency>
         <dependency>
