--- a/pom.xml
+++ b/pom.xml
@@ -95,20 +95,24 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>2.3</version>
-                <configuration>
-                    <attach>false</attach>
-                </configuration>
                 <executions>
                     <execution>
-                        <id>user_distribution</id>
                         <phase>package</phase>
                         <goals>
-                            <goal>attached</goal>
+                            <goal>single</goal>
                         </goals>
                         <configuration>
-                            <descriptors>
-                                <descriptor>src/main/assembly/dist.xml</descriptor>
-                            </descriptors>
+                            <encoding>UTF-8</encoding>
+                            <archive>
+                                <manifest>
+                                    <mainClass>
+                                        com.giorgimode.subzero.VlcjPlayer
+                                    </mainClass>
+                                </manifest>
+                            </archive>
+                            <descriptorRefs>
+                                <descriptorRef>jar-with-dependencies</descriptorRef>
+                            </descriptorRefs>
                         </configuration>
                     </execution>
                 </executions>
@@ -190,5 +194,8 @@
             <version>2.5</version>
         </dependency>
     </dependencies>
-
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    </properties>
 </project>
