--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,14 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.12.4</version>
+                <configuration>
+                    <skipTests>true</skipTests>
+                </configuration>
+            </plugin>
         </plugins>
         <resources>
             <resource>
@@ -159,7 +167,7 @@
         <dependency>
             <groupId>uk.co.caprica</groupId>
             <artifactId>vlcj</artifactId>
-            <version>3.11.0-custom</version>
+            <version>3.10.1</version>
         </dependency>
         <dependency>
             <groupId>com.giorgimode</groupId>
